Color 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: lightblue;
+    background-color: blueviolet;
 }
 h1 {
-    color: antiquewhite;
+    color: navy;
     margin-left: 20px;
 }
